--- a/css/style.css
+++ b/css/style.css
@@ -245,3 +245,21 @@ body{
     border-radius: 50%;
     content: " ";
   }
+  .date{
+    animation: lightingText 5s linear infinite;
+  }
+  @keyframes lightingText {
+    0%,18%,20%,50.1%,60%,65.1%,80%,90.1%,92%{
+        color: transparent;
+        text-shadow: none;
+    }
+    18.1%,20.1%,50%,60.1%,65%,80.1%,90%,92.1%,100%{
+        color: #fff;
+        text-shadow: 0 0 10px #03bcf4,
+        0 0 20px #03bcf4,
+        0 0 40px #03bcf4,
+        0 0 60px #03bcf4,
+        0 0 80px #03bcf4,
+        0 0 100px #03bcf4
+    }
+  }
