--- a/css/calendar.css
+++ b/css/calendar.css
@@ -1,334 +1,441 @@
 :root {
-    --dark-body: #4D4C5A;
-    --dark-main: #141529;
-    --dark-second: #79788C;
-    --dark-hover: #323048;
-    --dark-text: #F8FBFF;
+  --dark-body: #4d4c5a;
+  --dark-main: #141529;
+  --dark-second: #79788c;
+  --dark-hover: #323048;
+  --dark-text: #f8fbff;
 
-    --light-body: #F3F8FE;
-    --light-main: #FDFDFD;
-    --light-second: #C3C2C8;
-    --light-hover: #EDF0F5;
-    --light-text: #151426;
+  --light-body: #f3f8fe;
+  --light-main: #fdfdfd;
+  --light-second: #c3c2c8;
+  --light-hover: #edf0f5;
+  --light-text: #151426;
 
-    --green: #03C988;
-    --white: #fff;
+  --green: #03c988;
+  --white: #fff;
 
-    --shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  --shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 
-    --font-family: cursive;
+  --font-family: cursive;
 }
 
 .dark {
-    --bg-main: var(--dark-main);
-    --bg-second: var(--dark-second);
-    --color-hover: var(--dark-hover);
-    --color-txt: var(--dark-text);
+  --bg-main: var(--dark-main);
+  --bg-second: var(--dark-second);
+  --color-hover: var(--dark-hover);
+  --color-txt: var(--dark-text);
 }
 
 .light {
-    --bg-body: var(--light-body);
-    --bg-main: var(--light-main);
-    --bg-second: var(--light-second);
-    --color-hover: var(--light-hover);
-    --color-txt: var(--light-text);
+  --bg-body: var(--light-body);
+  --bg-main: var(--light-main);
+  --bg-second: var(--light-second);
+  --color-hover: var(--light-hover);
+  --color-txt: var(--light-text);
 }
 
 .calendar {
-    display: flex;
-    width: 100%;
-    height: auto;
-    flex-direction: column;
-    /* background-color: var(--bg-main); */
-    background: transparent;
-    border-radius: 30px;
-    position: relative;
-    overflow: hidden;
+  display: flex;
+  width: 100%;
+  height: auto;
+  flex-direction: column;
+  /* background-color: var(--bg-main); */
+  background: transparent;
+  border-radius: 30px;
+  position: relative;
+  overflow: hidden;
 }
 
 .light .calendar {
-    box-shadow: var(--shadow);
+  box-shadow: var(--shadow);
 }
 
 .calendar-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-size: 23px;
-    font-weight: 600;
-    color: var(--color-txt);
-    padding: 10px 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 23px;
+  font-weight: 600;
+  color: var(--color-txt);
+  padding: 10px 0;
 }
 
 .calendar-body {
-    padding: 10px 0;
-    width: 100%;
+  padding: 10px 0;
+  width: 100%;
 }
 
 .calendar-week-day {
-    display: grid;
-    grid-template-columns: repeat(7, 1fr);
-    gap: 5px;
-    font-weight: 600;
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  gap: 5px;
+  font-weight: 600;
+  animation: countdown-rotation 0.5s forwards;
 }
 
+@keyframes countdown-rotation {
+    0%{
+        transform: rotateX(0deg);
+    }
+    100%{
+        transform: rotateX(360deg);
+    }
+}
 .calendar-week-day div {
-    display: grid;
-    place-items: center;
-    color: var(--bg-second);
-    
+  display: grid;
+  place-items: center;
+  color: var(--bg-second);
+  background: hsla(141, 54%, 86%, 1);
+
+  background: linear-gradient(90deg, hsla(141, 54%, 86%, 1) 0%, hsla(333, 73%, 85%, 1) 50%, hsla(211, 58%, 79%, 1) 100%);
+  
+  background: -moz-linear-gradient(90deg, hsla(141, 54%, 86%, 1) 0%, hsla(333, 73%, 85%, 1) 50%, hsla(211, 58%, 79%, 1) 100%);
+  
+  background: -webkit-linear-gradient(90deg, hsla(141, 54%, 86%, 1) 0%, hsla(333, 73%, 85%, 1) 50%, hsla(211, 58%, 79%, 1) 100%);
+  
+  filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#CAEFD7", endColorstr="#F5BFD7", GradientType=1 );
+-webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 .calendar-day {
-    display: grid;
-    width: 100%;
-    grid-template-columns: repeat(7, 1fr);
-    gap: 2px;
-    color: var(--color-txt);
-    place-items: center;
+  display: grid;
+  width: 100%;
+  grid-template-columns: repeat(7, 1fr);
+  gap: 2px;
+  color: var(--color-txt);
+  place-items: center;
 }
 
 .calendar-day div {
-    width: 35px;
-    height: 35px;
-    display: grid;
-    place-items: center;
-    padding: 5px;
-    position: relative;
-    cursor: pointer;
-    animation: to-top 1s forwards;
-    background: #77A1D3;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #E684AE, #79CBCA, #77A1D3);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #E684AE, #79CBCA, #77A1D3); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    font-size: 20px;
+  width: 35px;
+  height: 35px;
+  display: grid;
+  place-items: center;
+  padding: 5px;
+  position: relative;
+  cursor: pointer;
+  animation: to-top 1s forwards;
+  background: #77a1d3; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #e684ae,
+    #79cbca,
+    #77a1d3
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #e684ae,
+    #79cbca,
+    #77a1d3
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-size: 20px;
 }
 
 .month-picker {
-    padding: 5px 10px;
-    border-radius: 10px;
-    cursor: pointer;
+  padding: 5px 10px;
+  border-radius: 10px;
+  cursor: pointer;
+  background: hsla(33, 100%, 53%, 1);
+
+  background: linear-gradient(
+    90deg,
+    hsla(33, 100%, 53%, 1) 0%,
+    hsla(58, 100%, 68%, 1) 100%
+  );
+
+  background: -moz-linear-gradient(
+    90deg,
+    hsla(33, 100%, 53%, 1) 0%,
+    hsla(58, 100%, 68%, 1) 100%
+  );
+
+  background: -webkit-linear-gradient(
+    90deg,
+    hsla(33, 100%, 53%, 1) 0%,
+    hsla(58, 100%, 68%, 1) 100%
+  );
+
+  filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#FF930F", endColorstr="#FFF95B", GradientType=1 );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  text-shadow: linear-gradient(
+    90deg,
+    hsla(33, 100%, 53%, 1) 0%,
+    hsla(58, 100%, 68%, 1) 100%
+  );
 }
 
 .month-picker:hover {
-    background-color: var(--color-hover);
+  background-color: var(--color-hover);
 }
 
 .year-picker {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
+span#year {
+  background: hsla(33, 100%, 53%, 1);
 
+  background: linear-gradient(
+    90deg,
+    hsla(33, 100%, 53%, 1) 0%,
+    hsla(58, 100%, 68%, 1) 100%
+  );
+
+  background: -moz-linear-gradient(
+    90deg,
+    hsla(33, 100%, 53%, 1) 0%,
+    hsla(58, 100%, 68%, 1) 100%
+  );
+
+  background: -webkit-linear-gradient(
+    90deg,
+    hsla(33, 100%, 53%, 1) 0%,
+    hsla(58, 100%, 68%, 1) 100%
+  );
+
+  filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#FF930F", endColorstr="#FFF95B", GradientType=1 );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
 .year-change {
-    height: 40px;
-    width: 40px;
-    border-radius: 50%;
-    display: grid;
-    place-items: center;
-    cursor: pointer;
+  height: 40px;
+  width: 40px;
+  border-radius: 50%;
+  display: grid;
+  place-items: center;
+  cursor: pointer;
 }
 
 .year-change:hover {
-    background-color: var(--color-hover);
+  background-color: var(--color-hover);
 }
 
 .calendar-footer {
-    padding: 10px 0;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    display: none;
+  padding: 10px 0;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  display: none;
 }
 
 .toggle {
-    display: flex;
+  display: flex;
 }
 
 .toggle span {
-    margin-right: 10px;
-    color: var(--color-txt);
+  margin-right: 10px;
+  color: var(--color-txt);
 }
 
 .dark-mode-switch {
-    position: relative;
-    width: 48px;
-    height: 25px;
-    border-radius: 14px;
-    background-color: var(--bg-second);
-    cursor: pointer;
+  position: relative;
+  width: 48px;
+  height: 25px;
+  border-radius: 14px;
+  background-color: var(--bg-second);
+  cursor: pointer;
 }
 
 .dark-mode-switch-ident {
-    width: 21px;
-    height: 21px;
-    border-radius: 50%;
-    background-color: var(--bg-main);
-    position: absolute;
-    top: 2px;
-    left: 2px;
-    transition: left 0.2 ease-in-out;
+  width: 21px;
+  height: 21px;
+  border-radius: 50%;
+  background-color: var(--bg-main);
+  position: absolute;
+  top: 2px;
+  left: 2px;
+  transition: left 0.2 ease-in-out;
 }
 
 .dark .dark-mode-switch .dark-mode-switch-ident {
-    top: 2px;
-    left: calc(2px + 50%);
+  top: 2px;
+  left: calc(2px + 50%);
 }
 
 .calendar-day div span {
-    position: absolute;
+  position: absolute;
 }
 
 .calendar-day div:hover span {
-    transition: width 0.2s ease-in-out, height 0.2s ease-in-out;
+  transition: width 0.2s ease-in-out, height 0.2s ease-in-out;
 }
 
 .calendar-day div span:nth-child(1),
 .calendar-day div span:nth-child(3) {
-    width: 2px;
-    height: 0;
-    background-color: var(--color-txt);
+  width: 2px;
+  height: 0;
+  background: #77a1d3; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #e684ae,
+    #79cbca,
+    #77a1d3
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #e684ae,
+    #79cbca,
+    #77a1d3
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 .calendar-day div:hover span:nth-child(1),
 .calendar-day div:hover span:nth-child(3) {
-    height: 100%;
+  height: 100%;
 }
 
 .calendar-day div span:nth-child(1) {
-    bottom: 0;
-    left: 0;
+  bottom: 0;
+  left: 0;
 }
 
 .calendar-day div span:nth-child(3) {
-    top: 0;
-    right: 0;
+  top: 0;
+  right: 0;
 }
 
 .calendar-day div span:nth-child(2),
 .calendar-day div span:nth-child(4) {
-    width: 0;
-    height: 2px;
-    background-color: var(--color-txt);
+  width: 0;
+  height: 2px;
+  background: #77a1d3; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #e684ae,
+    #79cbca,
+    #77a1d3
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #e684ae,
+    #79cbca,
+    #77a1d3
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 .calendar-day div:hover span:nth-child(2),
 .calendar-day div:hover span:nth-child(4) {
-    width: 100%;
+  width: 100%;
 }
 
 .calendar-day div span:nth-child(2) {
-    top: 0;
-    left: 0;
+  top: 0;
+  left: 0;
 }
 
 .calendar-day div span:nth-child(4) {
-    bottom: 0;
-    right: 0;
+  bottom: 0;
+  right: 0;
 }
 
 .calendar-day div:hover span:nth-child(2) {
-    transition-delay: 0.2s;
+  transition-delay: 0.2s;
 }
 
 .calendar-day div:hover span:nth-child(3) {
-    transition-delay: 0.4s;
+  transition-delay: 0.4s;
 }
 
 .calendar-day div:hover span:nth-child(4) {
-    transition-delay: 0.6s;
+  transition-delay: 0.6s;
 }
 
 .calendar-day .currDate {
-    
-    background: transparent;
-    border-radius: 50%;
-    -webkit-background-clip: border-box;
-    -webkit-text-fill-color: white;
-    animation: glowing-textshadow 1s ease-in-out infinite alternate;
+  background: transparent;
+  border-radius: 50%;
+  -webkit-background-clip: border-box;
+  -webkit-text-fill-color: white;
+  animation: glowing-textshadow 1s ease-in-out infinite alternate;
 }
 
 .calendar-day .birthDay {
-    
-    background: white;
-    border-radius: 50%;
-    -webkit-background-clip: border-box;
-    -webkit-text-fill-color: black;
-    animation: glowing-boxshadow 1s ease-in-out infinite alternate;
+  background: white;
+  border-radius: 50%;
+  -webkit-background-clip: border-box;
+  -webkit-text-fill-color: black;
+  animation: glowing-boxshadow 1s ease-in-out infinite alternate;
 }
 
 @keyframes glowing-textshadow {
-    from {
-      text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #f0f, 0 0 40px #0ff, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
-    }
-    to {
-      text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
-    }
+  from {
+    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #f0f, 0 0 40px #0ff,
+      0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
   }
+  to {
+    text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6,
+      0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
+  }
+}
 
-  @keyframes glowing-boxshadow {
-    from {
-      box-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #f0f, 0 0 40px #0ff, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
-    }
-    to {
-      box-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
-    }
+@keyframes glowing-boxshadow {
+  from {
+    box-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #f0f, 0 0 40px #0ff,
+      0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
   }
+  to {
+    box-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6,
+      0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
+  }
+}
 
 .calendar-day div.currDate span {
-    display: none;
+  display: none;
 }
 
 .month-list {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    background-color: var(--bg-main);
-    padding: 20px;
-    color: var(--color-txt);
-    display: grid;
-    grid-template-columns: repeat(3, auto);
-    gap: 5px;
-    transform: scale(1.5);
-    visibility: hidden;
-    pointer-events: none;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: var(--bg-main);
+  padding: 20px;
+  color: var(--color-txt);
+  display: grid;
+  grid-template-columns: repeat(3, auto);
+  gap: 5px;
+  transform: scale(1.5);
+  visibility: hidden;
+  pointer-events: none;
 }
 
 .month-list.show {
-    transform: scale(1);
-    visibility: visible;
-    pointer-events: visible;
-    transition: all 0.2s ease-in-out;
+  transform: scale(1);
+  visibility: visible;
+  pointer-events: visible;
+  transition: all 0.2s ease-in-out;
 }
 
-.month-list>div {
-    display: grid;
-    place-items: center;
+.month-list > div {
+  display: grid;
+  place-items: center;
 }
 
-.month-list>div>div {
-    width: 100%;
-    padding: 5px 20px;
-    border-radius: 10px;
-    text-align: center;
-    cursor: pointer;
+.month-list > div > div {
+  width: 100%;
+  padding: 5px 20px;
+  border-radius: 10px;
+  text-align: center;
+  cursor: pointer;
 }
 
-.month-list>div>div:hover {
-    background-color: var(--color-hover);
+.month-list > div > div:hover {
+  background-color: var(--color-hover);
 }
 
 @keyframes to-top {
-    0% {
-        transform: translateY(100%);
-        opacity: 0;
-    }
+  0% {
+    transform: translateY(100%);
+    opacity: 0;
+  }
 
-    100% {
-        transform: translateY(0);
-        opacity: 1;
-    }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
 }
