--- a/css/style.css
+++ b/css/style.css
@@ -159,8 +159,8 @@ body{
     
     border-top: 1px solid rgba(255, 255, 255, 0.5);
     border-left: 1px solid rgba(255, 255, 255, 0.5);
-    -webkit-backdrop-filter: blur(30px);
-    backdrop-filter: blur(30px);
+    -webkit-backdrop-filter: blur(30px) contrast(90%);
+    backdrop-filter: blur(30px) contrast(90%);
     transform-style: preserve-3d;
     transform: perspective(1000px);
     /* overflow: hidden; */
