--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,22 @@ body{
     background-color: black;
     position: relative;
 }
+
+#wrapper-particles{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 0;
+    opacity: 0;
+    animation: sky-effect 3s forwards 2s;
+}
+@keyframes sky-effect {
+    100%{
+        opacity: 1;
+    }
+}
 /* body::before{
     content: "";
     position: absolute;
