--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ body {
   bottom: 0;
   left: 0;
   right: 0;
-  z-index: 0;
+  z-index: -2;
   opacity: 0;
 }
 @keyframes sky-effect {
@@ -435,7 +435,7 @@ body {
   opacity: 0;
   bottom: -50vh;
   z-index: 10;
-  animation: show-swipper 3s forwards;
+  /* animation: show-swipper 3s forwards; */
 }
 @keyframes show-swipper {
   50%{
